@@ -26,6 +26,7 @@
   *   - None
   *  - Library Applications:
   *   - Fixed Benito project discarding incoming data from the USB virtual serial port when the USART is busy
+  *   - Fixed broken DFU bootloader, added XPLAIN support for bootloader start when XCK jumpered to ground
   *
   *  \section Sec_ChangeLog101122 Version 101122
   *  <b>New:</b>
